--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "normalize.css": "^8.0.1",
         "react": "^18.1.0",
         "react-app-rewired": "^2.2.1",
+        "react-cookie": "^4.1.1",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
