--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-app-rewired": "^2.2.1",
         "react-cookie": "^4.1.1",
         "react-dom": "^18.1.0",
+        "react-number-format": "^4.9.3",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "react-slideshow-image": "^3.7.5",
